--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -11,7 +11,7 @@
   section {
     padding: 2rem;
   }
-  .about .row{
+  .features .row{
     justify-content: center;
   }
   .home .row .image {
@@ -21,8 +21,12 @@
     flex-wrap: nowrap;
   }
   .content .icons a {
-    width: 40px;
-    height: 40px;
+    width: 60px;
+    height: 50px;
+}
+.portfolio .box-container  {
+  justify-content: center;
+  display: flex;
 }
 }
 @media (max-width: 991px){
@@ -50,7 +54,9 @@
   html {
     font-size: 50%;
   }
-
+  .portfolio .box-container {
+    justify-content: center;
+  }
   .header {
     padding: 1.5rem 2rem;
   }
